--- a/data/nlu/course_selection.yml
+++ b/data/nlu/course_selection.yml
@@ -39,7 +39,6 @@ nlu:
     examples: |
       - 预选阶段选中的课还在吗？能不能退？
       - 预选阶段中选的课还在吗？能不能退？
-      - 预选阶段选中还在吗能不能退
       - 预选阶段选中的课能退吗？
       - 预选课阶段选中的课能退吗？
       - 预选课阶段选中的课能退吗
@@ -50,6 +49,26 @@ nlu:
       - 预选阶段的选课能退选不
       - 预选阶段选中的课怎么退选
       - 退选预选阶段选中的课
+      - 预选课程能取消吗？
+      - 如果我已经预选了一门课程，我能取消吗？
+      - 是否可以在预选阶段取消所选的课程？
+      - 我能在预选期间取消我选的课吗？
+      - 在预选期间，我可以更改我的课程吗？
+      - 我在预选期间选错了一门课，我能取消吗？
+      - 预选课程取消有什么限制吗？
+      - 我能在预选期间更改我的选课吗？
+      - 预选期间我选择了一个错误的课程，是否能更改或取消？
+      - 预选阶段是否允许取消已选的课程？
+      - 如果我在预选期间选择了错误的课程，我是否能更改或取消？
+      - 预选阶段的选课是可修改的吗？
+      - 我能否在预选期间取消已选择的课程？
+      - 预选期间我选择的课程是否可以取消？
+      - 如果我已经预选了一门课程，但我想取消它，是否可以？
+      - 预选阶段的选课是否可以更改或取消？
+      - 如果我在预选期间选了错课，我是否能取消？
+      - 我能在预选期间更改或取消已选择的课程吗？
+      - 如果我在预选期间选择了错误的课程，我是否能更改或取消？
+      - 预选阶段的选课可以在什么条件下取消？
 
   - intent: 选课事宜/切换选课校区
     examples: |
@@ -67,6 +86,26 @@ nlu:
       - 如何选择其他校区的课程？
       - 如何选择其他校区的课程
       - 怎样选择其他校区的课程
+      - 如果我想从一个校区的课程切换到另一个校区的课程，该怎么办？
+      - 如何在不同的校区之间切换选课？
+      - 如果我需要在不同的校区选课，该怎么操作？
+      - 我想要在不同的校区选课，应该怎么做？
+      - 如何在不同校区之间切换选课？
+      - 如果我在一个校区选错了课程，如何切换到另一个校区的课程？
+      - 如何更改所选校区的课程？
+      - 如果我需要更改选课校区，该怎么办？
+      - 我可以在不同的校区之间调换选课吗？
+      - 如果我想更改选课校区，应该怎么做？
+      - 是否可以在不同的校区之间切换已选的课程？
+      - 如何从一个校区的课程切换到另一个校区的课程？
+      - 我该怎么操作才能在不同的校区之间更改选课？
+      - 如果我选择的课程在另一个校区也有开课，我可以切换到那个校区吗？
+      - 如何将所选的课程从一个校区切换到另一个校区？
+      - 如果我需要在不同的校区之间切换选课，应该如何操作？
+      - 如果我想更改所选校区的课程，应该怎么办？
+      - 如何在不同的校区之间调换所选的课程？
+      - 如何更改已经选定的课程的校区？
+      - 如果我选错了校区的课程，该如何切换到另一个校区的课程？
 
   - intent: 选课事宜/登录选课系统
     examples: |
@@ -84,7 +123,9 @@ nlu:
       - 忘记登录选课系统的密码
       - 怎么登陆选课系统
       - 进入本科生选课系统
+      - 怎么登陆本科生选课系统
       - 进入研究生选课系统
+      - 怎么登陆研究生选课系统
 
   - intent: 选课事宜/不能进入选课系统
     examples: |
@@ -98,10 +139,41 @@ nlu:
       - 选课系统进不去
       - 选课系统进不去怎么办？
       - 选课系统进不去怎么办
+      - 无法进入选课系统，该怎么办？
+      - 为什么我无法登录选课系统？
+      - 选课系统为什么无法正常访问？
+      - 选课系统一直在加载，进不去怎么办？
+      - 登录选课系统时出现了错误，怎么解决？
+      - 选课系统显示错误或故障，该如何应对？
+      - 我想选课但选课系统打不开怎么办？
+      - 我试图登录选课系统，但是一直在等待页面加载，该怎么办？
+      - 选课系统无法连接，有什么解决方法？
+      - 我的账号密码正确，为什么无法登录选课系统？
+      - 选课系统无法识别我的账号信息，是怎么回事？
+      - 我的网络连接正常，为什么无法进入选课系统？
 
   - intent: 选课事宜/其他
     examples: |
       - 选课相关问题
+      - 如果我要更改选课校区，是否需要重新注册？
+      - 如何更改选课校区后的学费和其他费用？
+      - 如何申请校际交换项目，以便在不同的校区选课？
+      - 如何在校区之间转移学分？
+      - 如何在选课过程中申请研究生课程的准入？
+      - 如何更改选课校区后的奖学金和其他资助？
+      - 如何在选课期间申请辅修或双学位计划？
+      - 如何在选课过程中申请提前毕业？
+      - 如何更改选课校区后的住宿和餐饮安排？
+      - 有没有关于预选阶段选课的时间限制？
+      - 预选阶段的选课有哪些注意事项？
+      - 预选期间可以选择的课程数量是否有限制？
+      - 在预选期间如何查看课程信息？
+      - 预选期间是否有选课顾问提供帮助？
+      - 预选期间是否需要进行课程的先修要求确认？
+      - 预选阶段的选课是否会影响我的学位要求？
+      - 如何确定在预选期间选课的优先级？
+      - 预选期间是否有针对特定专业的选课要求？
+      - 预选阶段选课是否会影响我之后的选课和注册过程？
       - 哪里能查询到专业课介绍的内容
       - 是否课程号一样的mooc可替代公共必修
       - Bb上发布的作业哪里看
