--- a/data/nlu/employment_guidance.yml
+++ b/data/nlu/employment_guidance.yml
@@ -9,6 +9,17 @@ nlu:
       - 怎么修改毕业生资源信息
       - 如何修改毕业生资源信息
       - 我要修改毕业生资源信息
+      - 我想修改毕业生资源信息，应该怎么做？
+      - 如何更改毕业生资源信息？
+      - 我需要修改毕业生资源信息，该如何操作？
+      - 毕业生资源信息有误，如何修改？
+      - 我在毕业生资源页面发现错误，如何进行更正？
+      - 我如何更新毕业生资源信息？
+      - 修改毕业生资源信息需要哪些步骤？
+      - 我需要更新毕业生资源信息，但不知道从哪里开始，应该怎么办？
+      - 我想更改毕业生资源信息，但是找不到修改入口，怎么办？
+      - 我需要修改已经发布的毕业生资源信息，该如何操作？
+      - 我的毕业生资源信息有误，如何联系管理员进行修改？
 
   - intent: 就业指导/补办或申领《就业报到证》
     examples: |
@@ -22,6 +33,17 @@ nlu:
       - 就业报到证可以补办吗？
       - 怎么补办就业报到证？
       - 怎么申领就业报到证？
+      - 我需要补办就业报到证，应该怎么做？
+      - 就业报到证遗失了，该如何申请补办？
+      - 如何申请领取就业报到证？
+      - 我需要办理就业报到证，需要哪些材料？
+      - 就业报到证丢失了，如何补办？
+      - 我在哪里可以申请领取就业报到证？
+      - 我已经毕业了，如何办理就业报到证？
+      - 就业报到证需要预约吗？如何预约？
+      - 就业报到证申请需要交费吗？应该怎么缴费？
+      - 我需要重新办理就业报到证，应该怎么操作？
+      - 我的就业报到证遗失了，是否可以在线申请补办？
 
   - intent: 就业指导/申请改派
     examples: |
@@ -30,6 +52,14 @@ nlu:
       - 毕业生改派
       - 怎么申请改派
       - 申请改派
+      - 毕业生如何申请改派工作？
+      - 我想改派工作，应该如何申请？
+      - 如何申请毕业生改派？
+      - 毕业生改派申请需要提交哪些材料？
+      - 改派工作的流程是什么？应该如何操作？
+      - 我已经就业了，但希望改派到其他地区，该怎么办？
+      - 改派工作需要满足哪些条件？
+
 
   - intent: 就业指导/补办或申领《就业推荐表》
     examples: |
@@ -48,6 +78,13 @@ nlu:
       - 请问怎么补办就业推荐表
       - 怎么补办就业推荐表？
       - 如何补办就业推荐表
+      - 我需要补办就业推荐表，该如何操作？
+      - 如何申领就业推荐表？
+      - 我的就业推荐表遗失了，怎么办？
+      - 怎样才能办理就业推荐表的申领手续？
+      - 就业推荐表的申领流程是什么？
+      - 我需要申领就业推荐表，但不清楚在哪里办理？
+
 
   - intent: 就业指导/怎么办理社会保险
     examples: |
@@ -65,6 +102,8 @@ nlu:
       - 社会保险有哪些？
       - 社会保险是什么
       - 社会保险是啥
+      - 社会保险是什么？有什么作用？
+      - 社会保险包括哪些内容？
 
   - intent: 就业指导/怎么签三方协议
     examples: |
@@ -80,6 +119,12 @@ nlu:
       - 签三方的操作流程
       - 签三方协议的操作流程
       - 签三方协议
+      - 签署三方协议需要哪些材料？
+      - 三方协议的签署流程是什么？
+      - 签署三方协议需要注意哪些事项？
+      - 签署三方协议需要提前准备什么？
+      - 三方协议的签署可以在线上完成吗？
+
 
   - intent: 就业指导/申请毕业生就业补贴
     examples: |
@@ -95,6 +140,13 @@ nlu:
       - 怎么申请就业补贴
       - 申请就业补贴要什么条件
       - 我可以申请就业补贴吗
+      - 毕业生就业补贴是什么？如何申请？
+      - 毕业生就业补贴的条件是什么？
+      - 申请毕业生就业补贴需要提供哪些材料？
+      - 如何查询自己是否符合申请毕业生就业补贴的条件？
+      - 申请毕业生就业补贴需要注意哪些细节？
+      - 申请毕业生就业补贴的流程是什么？
+
 
   - intent: 就业指导/什么是生源地
     examples: |
@@ -121,6 +173,14 @@ nlu:
       - 怎么申请重新签约
       - 怎样申请重新签约？
       - 我要申请重新签约，怎么操作？
+      - 如何重新签约？
+      - 我想重新签约，需要进行哪些步骤？
+      - 有没有重新签约的流程？可以告诉我吗？
+      - 我想要申请重新签约，需要准备哪些材料？
+      - 请问重新签约需要填写哪些表格？
+      - 能否告诉我重新签约的具体操作流程？
+      - 怎么办理重新签约的手续？
+
 
   - intent: 就业指导/什么是无效协议
     examples: |
@@ -148,6 +208,56 @@ nlu:
   - intent: 就业指导/其他
     examples: |
       - 就业指导相关问题
+      - 申请毕业生就业补贴的时间限制是多长？
+      - 毕业生就业补贴的额度如何确定？
+      - 毕业生就业补贴的发放方式是什么？
+      - 如何查询毕业生就业补贴的申请进度？
+      - 申请毕业生就业补贴需要缴纳相关费用吗？
+      - 如何申请补助发放后的后续服务或维护？
+      - 如何处理毕业生就业补贴申请被拒绝的情况？
+      - 申请毕业生就业补贴需要注意哪些风险防范？
+      - 申请毕业生就业补贴需要注意哪些合规问题？
+      - 毕业生就业补贴的相关政策法规有哪些？
+      - 毕业生就业补贴的额度是否会根据不同地区、行业等因素有所不同？
+      - 毕业生就业补贴的发放周期是多长？
+      - 毕业生就业补贴是否会影响后续的就业补助政策申请？
+      - 如何查询毕业生就业补贴的相关政策信息？
+      - 我需要就业推荐表的原件还是复印件？
+      - 办理就业推荐表需要哪些材料？
+      - 我已经找到工作，还需要申领就业推荐表吗？
+      - 如何查询已经申领的就业推荐表的进度？
+      - 就业推荐表的有效期是多久？是否可以办理延期？
+      - 就业推荐表的申领费用是多少？
+      - 就业推荐表的申领期限是多久？是否有截止日期？
+      - 我已经申领了就业推荐表，但想要修改申请信息，应该怎么办？
+      - 如何保护就业推荐表的安全性？
+      - 我已经离校，可以通过网络申领就业推荐表吗？
+      - 我需要申领就业推荐表，但我已经毕业多年了，还能申领吗？
+      - 我在其他城市工作，如何办理就业推荐表的申领手续？
+      - 我需要补办就业推荐表，但我现在在国外，该怎么办？
+      - 就业推荐表和就业证书有什么区别？
+      - 我需要修改就业报到证上的信息，应该怎么操作？
+      - 申领就业报到证需要多长时间？如何查询进度？
+      - 我的就业报到证被盗了，该怎么办？
+      - 就业报到证办理有时间限制吗？过期了怎么办？
+      - 我需要修改就业报到证上的照片，应该怎么办？
+      - 如何查询就业报到证的审核进度？
+      - 就业报到证办理需要本人到场吗？可以代办吗？
+      - 我的就业报到证信息有误，如何进行修改？
+      - 就业报到证申请被驳回了，该怎么办？
+      - 我需要改派到某个单位，但不知道该如何联系他们，应该怎么办？
+      - 改派工作需要支付相关费用吗？
+      - 我已经在单位工作了，但是希望改派到其他部门，该如何申请？
+      - 如何查询毕业生改派申请的进度？
+      - 改派工作的申请期限是多久？是否有截止日期？
+      - 我已经提交了改派申请，但想要修改申请信息，应该怎么办？
+      - 毕业生改派申请被驳回了，该如何处理？
+      - 我已经改派到另一个地区工作，如何办理户口迁移？
+      - 如何保证毕业生改派申请的公平性？
+      - 改派工作的流程复杂吗？需要注意哪些事项？
+      - 我想申请改派，但不清楚有哪些单位接收改派申请，应该怎么查询？
+      - 我想改派到某个单位，但不确定是否有该单位的职位空缺，应该怎么查询？
+      - 如何撤销毕业生改派申请？
       - 创业
       - 报到证
       - 求职创业补贴
