--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -7,6 +7,23 @@ nlu:
       - 硕士招生章程
       - 博士招生章程
       - 研究生报考
+      - 研究生招生政策在哪里可以了解到？
+      - 深圳大学的硕士研究生招生要求是什么？
+      - 想要报考深圳大学研究生，需要查看哪些招生章程？
+      - 硕士招生章程在哪里可以下载或者查看？
+      - 深圳大学博士研究生招生条件是什么？
+      - 想要了解深圳大学的研究生报考流程应该去哪里查询？
+      - 深圳大学的研究生招生章程中有哪些具体内容需要注意？
+      - 想要报考深圳大学的博士研究生，需要了解哪些招生章程？
+      - 研究生招生章程包括哪些方面的内容？
+      - 深圳大学研究生招生要求和标准有哪些变化？
+      - 研究生入学考试的具体要求在哪里可以查到？
+      - 深圳大学研究生报名需要注意哪些事项？
+      - 如何查看深圳大学研究生招生章程？
+      - 深圳大学研究生招生政策有哪些变化？
+      - 想要报考深圳大学的硕士研究生，需要了解哪些招生章程？
+      - 深圳大学的研究生报名时间和报名方式在哪里可以查询？
+      - 深圳大学研究生招生的标准和要求有哪些变化？
 
   - intent: 研究生招生/招生专业目录
     examples: |
@@ -15,6 +32,23 @@ nlu:
       - 研究生招生专业目录
       - 硕士招生专业目录
       - 博士招生专业目录
+      - 研究生招生的专业范围是怎样的？
+      - 深圳大学研究生可以报考哪些专业？
+      - 硕士生招生的专业目录在哪里可以查到？
+      - 博士生招生的专业目录在哪里可以找到？
+      - 深圳大学研究生招生有哪些专业可以选择？
+      - 研究生招生有哪些专业可以申请？
+      - 研究生可以报考哪些专业？
+      - 研究生招生的专业有哪些？
+      - 深圳大学研究生招生范围包括哪些专业？
+      - 研究生可以报考哪些领域的专业？
+      - 深圳大学研究生招生专业列表在哪里可以查到？
+      - 研究生招生计划中包含哪些专业？
+      - 深圳大学研究生招生有哪些专业是比较热门的？
+      - 研究生可以选择哪些研究方向？
+      - 研究生可以报考哪些交叉学科的专业？
+      - 研究生招生专业有哪些变化？
+      - 研究生招生的专业目录每年都会更新吗？
 
   - intent: 研究生招生/奖助体系
     examples: |
@@ -22,6 +56,17 @@ nlu:
       - 硕士奖学金
       - 博士奖学金
       - 研究生奖学金有哪些
+      - 研究生有哪些奖助政策？
+      - 研究生可以申请哪些奖助金？
+      - 研究生奖学金的申请条件是什么？
+      - 研究生奖学金的金额是多少？
+      - 如何申请研究生奖学金？
+      - 研究生有哪些奖学金可以申请？
+      - 研究生奖学金的评定标准是什么？
+      - 研究生可以申请哪些助学金？
+      - 研究生有没有需要还款的奖学金？
+      - 研究生可以申请哪些奖学金和贷款？
+
 
   - intent: 研究生招生/非全日制硕士招生信息
     examples: |
@@ -37,10 +82,40 @@ nlu:
       - 研究生历年录取情况统计表
       - 研究生历年录取情况
       - 研究生历年录取情况怎么样
+      - 深圳大学研究生历年招生统计数据在哪里可以查到？
+      - 如何了解深圳大学研究生历年录取情况？
+      - 深圳大学研究生录取历年数据
+      - 研究生历年录取情况在哪里可以查询到？
+      - 深圳大学研究生历年录取情况报告在哪里可以查看？
+      - 深圳大学研究生历年录取情况数据在哪里可以下载？
+      - 如何查询深圳大学研究生历年招生数据统计表？
+      - 研究生历年录取情况数据可以在哪里获得？
+      - 如何获得深圳大学研究生历年录取情况报告？
+      - 深圳大学研究生历年录取情况数据如何查询？
+      - 研究生历年录取情况表格在哪里可以获取？
+      - 深圳大学研究生历年录取情况怎么查看？
+      - 如何获取深圳大学研究生录取历年数据统计表？
+      - 研究生历年录取情况报告如何查阅？
+      - 深圳大学研究生历年录取情况统计数据如何下载？
+      - 研究生历年录取情况数据如何获取？
+      - 深圳大学研究生历年录取情况报告在哪里可以下载？
+      - 如何获得深圳大学研究生历年招生统计数据？
+      - 深圳大学研究生历年录取情况数据在哪里可以查阅？
+      - 研究生历年录取情况表格可以在哪里下载？
 
   - intent: 研究生招生/其他
     examples: |
       - 研究生招生相关问题
+      - 研究生奖学金的申请截止日期是什么时候？
+      - 研究生奖学金可以同时申请多个吗？
+      - 研究生奖学金的申请流程是什么？
+      - 研究生奖学金的评定流程是什么？
+      - 研究生可以申请校外的奖学金吗？
+      - 研究生可以申请省外的奖学金吗？
+      - 研究生奖学金的申请材料有哪些？
+      - 研究生奖学金的发放时间是什么时候？
+      - 研究生奖学金的发放方式是什么？
+      - 深圳大学研究生入学规定在哪里可以查到？
       - 研招网上的考生信息填写中的“符合报考条件的最后学历毕业专业”，没有“微电子科学与工程”专业，应该怎样填写。
       - 考生档案所在单位名称和地址（详细到门牌号），应该怎样填写。
       - 哪里有学术型硕士研究生毕业要求的详细说明？具体发几篇文章、期刊的标准，还有作者的排序之类的
