--- a/data/nlu/library.yml
+++ b/data/nlu/library.yml
@@ -13,6 +13,19 @@ nlu:
       - 推荐购买图书
       - 推荐购买书籍
       - 图书馆荐购
+      - 怎么向图书馆推荐购买我需要的书籍？
+      - 我想推荐一本书给图书馆，应该怎么做？
+      - 如何把我想看的书推荐给图书馆购买？
+      - 怎样向图书馆建议购买特定书籍？
+      - 如何建议图书馆购买我需要的书？
+      - 我该如何推荐图书馆购买我想看的书？
+      - 如何向图书馆提出书籍购买请求？
+      - 如何把我想看的书推荐给图书馆？
+      - 我如何向图书馆推荐购买一本书？
+      - 怎么向图书馆建议购买我所需要的书籍？
+      - 我想推荐一本书给图书馆，该怎么做？
+      - 如何建议图书馆购买我需要的书？
+      - 如何向图书馆提供购买某本书的建议？
   
   - intent: 图书馆服务/预约图书
     examples: |
@@ -23,6 +36,24 @@ nlu:
       - 怎么预约书
       - 预约图书
       - 图书馆可以预约图书吗
+      - 在图书馆预约书籍的流程是什么？
+      - 怎样在图书馆预约我想要借的书籍？
+      - 如何在图书馆预定书籍？
+      - 图书馆预约书籍的步骤是什么？
+      - 如何在图书馆预约想要借阅的图书？
+      - 我该怎么在图书馆预约要看的书？
+      - 预约图书的具体方法是什么？
+      - 在深圳大学图书馆怎么预约图书？
+      - 怎么在深圳大学图书馆预约书籍？
+      - 深大图书馆怎么样预约借阅书籍？
+      - 在深圳大学图书馆预约书籍的操作步骤是什么？
+      - 在深大图书馆预约图书的具体流程是什么？
+      - 我该怎样在深大图书馆预约我需要的书籍？
+      - 在深圳大学图书馆预约图书需要注意哪些事项？
+      - 在深大图书馆预约书籍需要注意哪些事项？
+      - 我想要借阅一本书，应该怎么在图书馆预约？
+      - 预约图书需要填写哪些信息？
+      - 如何在图书馆网站上预约图书？
   
   - intent: 图书馆服务/图书续借
     examples: |
@@ -32,6 +63,21 @@ nlu:
       - 图书续借
       - 图书馆可以续借吗
       - 图书馆怎么续借
+      - 图书馆的书可以续借吗？
+      - 如何进行图书续借？
+      - 续借图书有什么规定？
+      - 图书续借的时间是多久？
+      - 图书可以续借多少次？
+      - 续借需要什么手续？
+      - 图书到期怎么办？
+      - 图书续借需要在图书馆操作还是可以在网上完成？
+      - 续借图书需要收费吗？
+      - 续借需要在图书到期前还是可以过期后再续借？
+      - 图书续借的时间可以延长吗？
+      - 续借的期限是否和原来的借书期限一样？
+      - 续借图书是否有数量限制？
+      - 续借图书的流程是怎样的？
+      - 续借图书的方式有哪些？
   
   - intent: 图书馆服务/预借图书
     examples: |
@@ -177,6 +223,11 @@ nlu:
   - intent: 图书馆服务/其他
     examples: |
       - 图书馆相关问题
+      - 如何知道图书续借是否成功？
+      - 续借的图书是否可以预约？
+      - 续借的图书是否可以被其他人借阅？
+      - 图书馆预约图书的有效期是多久？
+      - 在深大图书馆如何查询预约记录？
       - 南图机房如果用了超过4小时怎么收费？
       - 图书馆服务相关问题
       - 图书馆相关问题
