--- a/data/nlu/makeup_exam.yml
+++ b/data/nlu/makeup_exam.yml
@@ -5,10 +5,24 @@ nlu:
       - 怎么申请缓考？
       - 缓考申请
       - 缓考页面怎么申请
+      - 如何申请缓考？
+      - 缓考申请流程是什么？
+      - 怎样才能申请缓考？
+      - 如何在网上申请缓考？
+      - 缓考怎么申请？
+      - 缓考申请的条件是什么？
+      - 申请缓考需要准备哪些材料？
+      - 如果无法参加考试，该如何申请缓考？
+
 
   - intent: 补考缓考/其他
     examples: |
       - 补考缓考相关问题
+      - 缓考申请截止时间是什么时候？
+      - 如何查询缓考申请的审核进度？
+      - 缓考申请需要支付费用吗？
+      - 缓考申请是否会影响学籍和学位？
+      - 缓考可以申请多长时间？
       - 期末考被退出来了，然后被交卷了，零分，能不能重考
       - 补考成绩什么时候可以出
       - 补考缓考相关问题
