--- a/data/nlu/network.yml
+++ b/data/nlu/network.yml
@@ -12,12 +12,50 @@ nlu:
     - VPN登录
     - 请问校外如何访问知网？
     - 在校外如何用知网稳定的在线阅读以及下载全文？
+    - 如何在校外访问学校的局域网？
+    - 怎样在外网访问学校的内网？
+    - 学校内网如何在校外使用？
+    - 校园网如何实现校外访问？
+    - 如何通过VPN访问学校内部网？
+    - 怎么设置VPN才能访问学校内网？
+    - 校外如何连接学校VPN访问内网？
+    - VPN如何连接学校内网？
+    - 学校的VPN如何使用？
+    - 如何使用校园网VPN连接访问内部网？
+    - 如何使用代理服务器访问学校的内部网？
+    - 怎样在外面连接学校的VPN？
+    - 学校VPN的配置方法？
+    - 如何在校外使用学校VPN浏览网站？
+    - 怎样使用VPN访问学校的图书馆数据库？
+    - 在家如何连接到学校的内网进行学习？
+    - 如何通过代理服务器访问学校内部网？
+    - 校外如何通过VPN访问校内文件？
+    - 如何在家中远程连接学校内部网？
+    - 如何在校外使用学校的远程桌面？
+    - 如何在家中通过VPN访问学校的图书馆？
+    - 如何在校外使用学校的远程VPN服务？
+    - 如何使用VPN访问学校的学术数据库？
 
 - intent: 校园网服务/校园宽带开通
   examples: |
     - 如何开通校园宽带？
     - 校园宽带开通
     - 如何开通校园宽带
+    - 怎样办理校园宽带？
+    - 如何申请校园宽带？
+    - 校园宽带开通的步骤是什么？
+    - 学校宽带怎么开通？
+    - 如何在学校办理宽带？
+    - 如何申请开通校园网？
+    - 校园网开通流程是什么？
+    - 如何在校园内办理宽带？
+    - 校园网如何办理开通？
+    - 如何开通学校的宽带网络？
+    - 学校宽带怎么办理开通？
+    - 校园网宽带如何申请？
+    - 校园宽带开通步骤
+    - 开通校园网宽带需要什么手续？
+    - 学校宽带怎么开通使用？
 
 - intent: 校园网服务/校园WiFi连接
   examples: |
