--- a/data/nlu/out_of_scope.yml
+++ b/data/nlu/out_of_scope.yml
@@ -3,6 +3,12 @@ nlu:
 
 - intent: out_of_scope
   examples: |
+    - 怎么下载百度的资料
+    - 怎么免费下载百度的资料
+    - 介绍一下深圳大学的秦斌老师
+    - 介绍一下深大的李发从老师
+    - 介绍一下深圳大学
+    - 你知道深大的姚兰老师吗
     - 换手机号
     - 换手机号要改在学校填信息留的号码吗，或者要跟老师说一声吗
     - 我问你一个超出范围的问题
