--- a/data/nlu/scholarship.yml
+++ b/data/nlu/scholarship.yml
@@ -7,6 +7,21 @@ nlu:
       - 生源地贷款何时发放
       - 国家生源地贷款何时发放
       - 什么时候发生源地贷款？
+      - 生源地贷款什么时候到账？
+      - 生源地贷款什么时候可以领取？
+      - 生源地贷款发放时间是什么时候？
+      - 生源地贷款什么时候到账？
+      - 生源地贷款的发放时间是怎样的？
+      - 什么时候能收到生源地贷款？
+      - 生源地贷款多久能到账？
+      - 生源地贷款什么时候会打到银行卡上？
+      - 生源地贷款会在什么时候到账？
+      - 生源地贷款放款时间是怎样的？
+      - 生源地贷款何时开始发放？
+      - 生源地贷款发放的时间表是怎样的？
+      - 生源地贷款一般多久能够到账？
+      - 生源地贷款何时能领取？
+      - 生源地贷款一般需要多长时间到账？
 
   - intent: 奖助学金/其他
     examples: |
