--- a/data/nlu/specialty.yml
+++ b/data/nlu/specialty.yml
@@ -24,10 +24,23 @@ nlu:
       - 转专业报名在哪里呀
       - 怎么报名转专业
       - 怎么报名转专业？
+      - 转专业如何报名？
+      - 想要转专业应该去哪里报名？
+      - 转专业的报名入口在哪里？
+      - 我该去哪里进行转专业的报名呢？
+      - 想要转专业需要在哪里进行报名？
+      - 转专业的申请应该去哪里提交？
+      - 转专业报名需要准备哪些材料？
+      - 转专业报名的具体流程是怎样的？
 
   - intent: 专业修读/其他
     examples: |
       - 专业修读相关问题
+      - 转专业的报名时间是什么时候？
+      - 转专业报名的截止日期是什么时候？
+      - 转专业申请的审核流程是怎样的？
+      - 转专业需要满足哪些条件？
+      - 转专业的申请是否有限制？
       - 除了人工智能的智慧医疗外，医学部还有啥微专业。还是说目前就这一个？
       - 播音主持专业的专业代码是多少
       - 想请问辅修学分不满会影响毕业吗？
