--- a/data/nlu/undergraduate_admission.yml
+++ b/data/nlu/undergraduate_admission.yml
@@ -6,53 +6,183 @@ nlu:
       - 深圳大学今年的录取分数线是多少？
       - 录取分数线是多少？
       - 深大本科录取分数线
+      - 深圳大学今年本科录取分数线是多少？
+      - 请问深圳大学今年的录取分数线是多少？
+      - 深圳大学本科录取分数线是多少呢？
+      - 深圳大学今年录取分数线怎么样？
+      - 请问深圳大学本科录取分数线是多少啊？
+      - 深圳大学本科录取分数线公布了吗？
+      - 深圳大学录取分数线需要达到多少呢？
+      - 深大本科录取分数线是多少？
+      - 深大本科录取分数线公布了吗？
+      - 请问深圳大学今年的录取分数线是什么？
+      - 深圳大学本科招生录取分数线出炉了吗？
+      - 今年深圳大学的录取分数线是多少？
+      - 深圳大学录取分数线需要达到多少才能被录取？
+      - 深圳大学本科录取分数线在哪里可以查看？
+      - 请问深圳大学今年本科录取分数线公布了吗？
 
   - intent: 本科生招生/招生计划和范围
     examples: |
       - 深圳大学的招生计划和范围？
       - 本科的招生计划和范围？
+      - 深圳大学的招生计划和招生范围是什么？
+      - 深圳大学有哪些专业可以招生？
+      - 深圳大学今年的招生计划和范围是怎样的？
+      - 深圳大学招生计划和范围如何查询？
+      - 深圳大学的招生计划和招生范围有哪些变化？
+      - 深圳大学招生范围是否有限制，如何判断是否符合？
+      - 深圳大学本科招生计划有哪些要求？
+      - 深圳大学是否会招收其他地区的考生？招生范围是怎样的？
+      - 深圳大学的招生计划和范围是否有政策限制？
+      - 深圳大学本科招生计划和招生范围的具体情况可以去哪里查询？
 
   - intent: 本科生招生/哪些专业比较好
     examples: |
       - 学校的哪些专业比较好？
       - 深大的哪些专业比较好？
+      - 哪些专业在深圳大学比较受欢迎？
+      - 深大的哪些专业比较有竞争力？
+      - 有哪些深大的专业比较受雇主青睐？
+      - 深大哪些专业的就业前景比较好？
+      - 哪些专业是深大的优势专业？
+      - 请问深大哪些专业比较热门？
+      - 哪些深大的专业比较有前途？
+      - 有哪些深大的专业毕业后比较容易找到工作？
+      - 深大的哪些专业排名比较靠前？
+      - 请问深大哪些专业的毕业生薪资比较高？
 
   - intent: 本科生招生/报考要求
     examples: |
       - 报考深圳大学有什么要求吗？
       - 报考贵校有什么要求吗？
       - 报考深大有什么要求吗？
+      - 深圳大学的报考条件是什么？
+      - 报考深圳大学需要什么条件？
+      - 想要报考深圳大学，需要满足哪些要求？
+      - 报考深圳大学需要哪些条件？
+      - 深圳大学的招生要求是什么？
+      - 深圳大学对考生有哪些要求？
+      - 想要考上深圳大学需要具备哪些条件？
+      - 深圳大学的报名条件是什么？
+      - 报考深圳大学需要满足哪些要求？
+      - 深圳大学的录取条件是什么？
+      - 报考深圳大学需要哪些资格？
+      - 想要考入深圳大学需要具备什么条件？
+      - 报考深圳大学需要哪些条件和资格？
+      - 深圳大学的入学要求是什么？
+      - 想要考上深圳大学需要具备哪些条件和资格？
+      - 报考深圳大学需要哪些证明材料？
+      - 深圳大学的招生政策有哪些？
+      - 想要考入深圳大学需要哪些资格证明？
+      - 深圳大学对报考者有哪些限制条件？
+      - 报考深圳大学需要满足哪些入学条件？
 
   - intent: 本科生招生/其他录取方式
     examples: |
       - 高考分数不够有其他方式被录取吗？
+      - 高考分数不够能否被录取？
+      - 高考成绩不够可以考虑其他方式吗？
+      - 如果高考分数不够，有没有其他方法被录取？
+      - 高考成绩不够可以通过其他途径被录取吗？
+      - 如果高考分数不够，还有其他的录取渠道吗？
+      - 高考成绩不够，还有别的办法能被招收吗？
+      - 如果高考分数达不到要求，有没有其他的选拔方式？
+      - 高考分数不够可以通过其他途径进入深圳大学吗？
+      - 如果高考成绩不够好，有没有其他的入学方式？
+      - 高考分数不够的话，还有别的方法能被录取吗？
+      - 高考成绩不够达标，还有其他的入学通道吗？
+      - 如果高考分数不够，能不能通过其他途径被录取到深圳大学？
+      - 高考分数不够能否通过其他的招生方式进入深圳大学？
+      - 如果高考成绩不够，还有没有其他的入学条件？
+      - 高考分数不够达标，还有别的办法能被深圳大学录取吗？
+      - 如果高考分数不够，是否可以通过其他考试的成绩被录取到深圳大学？
+      - 高考成绩不够可以通过其他的渠道被招收吗？
+      - 如果高考分数不够，是否可以通过其他方式被深圳大学录取？
 
   - intent: 本科生招生/是否双一流
     examples: |
       - 学校是否是“双一流”高校？
       - 深大是“双一流”吗？
+      - 深圳大学是“双一流”高校吗？
+      - 深圳大学是否入选“双一流”高校？
+      - 深圳大学是否是985或211高校？
 
   - intent: 本科生招生/服从调剂还会被退档吗
     examples: |
       - 服从调剂还会被退档吗？
+      - 如果服从调剂，是否还有可能被退档？
+      - 被调剂了还会不会退档？
+      - 如果同意调剂，是否会被取消录取资格？
+      - 如果服从调剂，还有可能失去录取的机会吗？
+      - 调剂后还会有可能落选吗？
+      - 同意调剂后是否还需要关注是否被退档？
+      - 调剂后是否还有可能被取消录取？
+      - 如果同意调剂，是否会影响最终的录取结果？
+      - 如果服从调剂，是否有可能被取消录取资格？
+      - 如果同意调剂，是否还需要担心被退档的情况？
 
   - intent: 本科生招生/专业录取规则
     examples: |
       - 专业录取规则是什么？
+      - 请问一下专业录取的规则是什么？
+      - 深大的专业录取规则是怎样的？
+      - 深圳大学的专业录取标准是什么？
+      - 专业录取是按照什么标准来的？
+      - 招生时的专业录取条件是什么？
+      - 学校的专业录取有哪些要求？
+      - 专业录取是如何进行的？
+      - 请问一下深大的专业录取方式是怎样的？
+      - 专业录取的评定标准是什么？
+      - 专业录取时重要的因素有哪些？
+      - 招生录取中专业录取的具体操作流程是怎样的？
+      - 专业录取时学校主要考虑哪些方面的因素？
+      - 专业录取的评估标准是怎样的？
+      - 专业录取中除了分数还会考虑其他因素吗？
+      - 请问一下深大的专业录取规则具体是怎样的？
+      - 学校的专业录取是按照什么顺序进行的？
+      - 专业录取时学校会考虑考生的综合素质吗？
+      - 专业录取的具体细节是什么？
 
   - intent: 本科生招生/志愿调剂提前通知
     examples: |
       - 志愿调剂会不会提前通知考生？
+      - 志愿调剂会提前通知考生吗？
+      - 调剂会提前通知吗？
+      - 如果被调剂了会提前通知吗？
+      - 调剂结果会提前通知吗？
+      - 调剂后通知考生吗？
+      - 调剂结果会提前公示吗？
+      - 有没有提前通知被调剂的考生？
+      - 调剂结果何时公示？
+      - 调剂后何时通知考生？
+      - 调剂结果会提前发送通知吗？
+      - 调剂结果会提前通知吗？
+      - 调剂后会提前通知考生吗？
+      - 调剂后何时通知被调剂的考生？
+      - 调剂结果会在何时公布？
+      - 调剂结果会提前通知考生吗？
+      - 被调剂后会提前告知考生吗？
+      - 调剂结果会提前告知考生吗？
+      - 调剂结果何时发布？
+      - 调剂结果会提前发送通知吗？
 
   - intent: 本科生招生/加分政策
     examples: |
       - 学校认可哪些加分政策？
+      - 学校承认哪些加分政策？
+      - 哪些加分政策是学校认可的？
+      - 哪些加分政策可以使用？
+      - 学校是否会考虑特定的加分政策？
+      - 学校是否接受学术或艺术成就的加分政策？
 
   - intent: 本科生招生/保研情况
     examples: |
       - 保研情况？
       - 保研情况如何？
       - 深大保研情况如何？
+      - 深圳大学保研难度大吗？
+      - 深大保研条件是什么？
 
   - intent: 本科生招生/转专业
     examples: |
