--- a/data/nlu/welcome.yml
+++ b/data/nlu/welcome.yml
@@ -5,12 +5,32 @@ nlu:
     examples: |
       - 深圳大学校历
       - 校历
+      - 怎么查看校历
+      - 你知道深圳大学的校历在哪里可以查看吗？
 
   - intent: 迎新服务/小巴定位
     examples: |
       - 小巴到站查询
       - 小巴定位
       - 小巴还有多久到
+      - 怎么查询小巴到站信息？
+      - 深大小巴到站查询在哪里？
+      - 小巴定位怎么查？
+      - 小巴有没有实时位置显示？
+      - 深圳大学小巴时刻表在哪里可以查看？
+      - 小巴还要多久到站？
+      - 小巴最近的一班车还有多久到站？
+      - 小巴到站信息在哪里可以查询？
+      - 小巴在线查询在哪里？
+      - 深圳大学小巴还要多久到我这里？
+      - 小巴到站信息如何查询？
+      - 怎么查看深大小巴的实时位置？
+      - 深圳大学小巴到站时间怎么查询？
+      - 小巴预计还需要多长时间到站？
+      - 小巴最新的到站信息在哪里可以看到？
+      - 深圳大学小巴的到站查询方式有哪些？
+      - 小巴多久到我这里？
+      - 怎么查询深圳大学小巴的实时位置？
 
   - intent: 迎新服务/校园地图
     examples: |
@@ -20,6 +40,7 @@ nlu:
       - 深大地图
       - 粤海校区地图
       - 丽湖校区地图
+      - 查看校园地图
 
   - intent: 迎新服务/迁户口
     examples: |
@@ -46,12 +67,14 @@ nlu:
     examples: |
       - 内部网网址
       - 深大内部网网址
+      - 内部网网址是什么
       
   - intent: 迎新服务/网上服务大厅
     examples: |
       - 网上服务大厅网址
       - 服务大厅网址
       - 深大网上服务大厅网址
+      - 服务大厅网址是什么
 
   - intent: 迎新服务/上课时间表
     examples: |
