--- a/data/stories/fallback_stories.yml
+++ b/data/stories/fallback_stories.yml
@@ -24,13 +24,6 @@ stories:
           - intent: 常用联系方式
       - action: action_trigger_response_selector
 
-  - story: nlu_fallback; out_of_scope
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: out_of_scope
-      - action: utter_out_of_scope
-
   - story: nlu_fallback; nlu_fallback;
     steps:
       - intent: nlu_fallback
@@ -241,11 +234,11 @@ stories:
       - intent: greet
       - action: utter_greet_noname
 
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; oos
+  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback
     steps:
       - intent: nlu_fallback
       - action: action_default_ask_affirmation
       - intent: deny
       - action: utter_ask_rephrase
-      - intent: out_of_scope
-      - action: utter_out_of_scope
+      - intent: nlu_fallback
+      - action: action_default_ask_affirmation
