删除affirm意图；完善stories；减小max_history：5→3

--- a/data/stories/fallback_stories.yml
+++ b/data/stories/fallback_stories.yml
@@ -1,129 +1,6 @@
 version: "2.0"
 stories:
 
-  - story: nlu_fallback; FAQ
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-
-  - story: nlu_fallback; nlu_fallback;
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-
-  - story: nlu_fallback; nlu_fallback; nlu_fallback;
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-
-  - story: nlu_fallback; FAQ; nlu_fallback; FAQ;
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-
-  - story: 存在相似意图; 用户选择/或回复 affirm
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: affirm
-      - action: utter_thumbsup
-
-  - story: 存在相似意图; 用户选择/或回复 bye
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: bye
-      - action: utter_bye
-
-  - story: 存在相似意图; 用户选择/或回复 canthelp
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: canthelp
-      - action: utter_canthelp
-
-  - story: 存在相似意图; 用户选择/或回复 human_handoff
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: human_handoff
-      - action: utter_contact_human
-
-  - story: 存在相似意图; 用户选择/或回复 thank
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: thank
-      - action: utter_noworries
-
-  - story: 存在相似意图; 用户回复 greet
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: greet
-      - action: utter_greet_noname
 
   - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问
     steps:
@@ -132,113 +9,7 @@ stories:
       - intent: deny
       - action: utter_ask_rephrase
 
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation
+  - story: fallback
     steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; FAQ
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; affirm
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: affirm
-      - action: utter_thumbsup
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; bye
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: bye
-      - action: utter_bye
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; canthelp
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: canthelp
-      - action: utter_canthelp
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; human_handoff
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: human_handoff
-      - action: utter_contact_human
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; thank
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: thank
-      - action: utter_noworries
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback; action_default_ask_affirmation; greet
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: greet
-      - action: utter_greet_noname
-
-  - story: 存在相似意图; 用户不选择相似意图; 请求用户重新提问; nlu_fallback
-    steps:
-      - intent: nlu_fallback
-      - action: action_default_ask_affirmation
-      - intent: deny
-      - action: utter_ask_rephrase
       - intent: nlu_fallback
       - action: action_default_ask_affirmation
