--- a/data/rules/fallback.yml
+++ b/data/rules/fallback.yml
@@ -1,8 +1,8 @@
-#version: "2.0"
-#rules:
-#  - rule: Single stage fallback
-#    steps:
-#      - intent: nlu_fallback
-#      - action: action_default_ask_affirmation
+version: "2.0"
 
+rules:
+  - rule: Single stage fallback
+    steps:
+      - intent: nlu_fallback
+      - action: action_default_ask_affirmation
 
