--- a/data/stories/cqa_stories.yml
+++ b/data/stories/cqa_stories.yml
@@ -21,114 +21,10 @@ stories:
           - intent: 迎新服务
           - intent: 常用联系方式
       - action: action_trigger_response_selector
-      - intent: deny
-      - action: action_community_qa
-
-  - story: FAQ; deny; CQA; affirm
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - intent: deny
-      - action: action_community_qa
-      - intent: affirm
-      - action: utter_thumbsup
-
-
-  - story: FAQ; deny; CQA; FAQ
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - intent: deny
-      - action: action_community_qa
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-
-
-  - story: FAQ; CQA_has_started; FAQ
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
       - slot_was_set:
-          - CQA_has_started: true
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
+          - CQA_has_started: false
+      - intent: deny
+      - action: action_community_qa
+
+
+
