--- a/data/stories/dqa_stories.yml
+++ b/data/stories/dqa_stories.yml
@@ -21,37 +21,13 @@ stories:
           - intent: 迎新服务
           - intent: 常用联系方式
       - action: action_trigger_response_selector
+      - slot_was_set:
+          - CQA_has_started: false
       - intent: deny
       - action: action_community_qa
       - intent: deny
       - action: action_document_qa
 
-  - story: FAQ; deny; CQA; deny; DQA; 人工服务
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - intent: deny
-      - action: action_community_qa
-      - intent: deny
-      - action: action_document_qa
-      - intent: deny
-      - action: utter_contact_human
 
   - story: FAQ; CQA_has_started; deny; DQA
     steps:
@@ -77,171 +53,3 @@ stories:
           - CQA_has_started: true
       - intent: deny
       - action: action_document_qa
-
-  - story: FAQ; CQA_has_started; deny; DQA; 人工服务
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - slot_was_set:
-          - CQA_has_started: true
-      - intent: deny
-      - action: action_document_qa
-      - intent: deny
-      - action: utter_contact_human
-
-  - story: FAQ; deny; CQA; deny; DQA; affirm
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - intent: deny
-      - action: action_community_qa
-      - intent: deny
-      - action: action_document_qa
-      - intent: affirm
-      - action: utter_thumbsup
-
-  - story: FAQ; CQA_has_started; deny; DQA; affirm
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - slot_was_set:
-          - CQA_has_started: true
-      - intent: deny
-      - action: action_document_qa
-      - intent: affirm
-      - action: utter_thumbsup
-
-
-  - story: FAQ; deny; CQA; deny; DQA; FAQ
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - intent: deny
-      - action: action_community_qa
-      - intent: deny
-      - action: action_document_qa
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-
-  - story: FAQ; CQA_has_started; deny; DQA; FAQ
-    steps:
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
-      - slot_was_set:
-          - CQA_has_started: true
-      - intent: deny
-      - action: action_document_qa
-      - or:
-          - intent: 图书馆服务
-          - intent: 就业指导
-          - intent: 后勤服务
-          - intent: 宿舍服务
-          - intent: 教学教务
-          - intent: 奖助学金
-          - intent: 专业修读
-          - intent: 补考缓考
-          - intent: 选课事宜
-          - intent: 学生证件
-          - intent: 校医院
-          - intent: 校园网服务
-          - intent: 本科生招生
-          - intent: 研究生招生
-          - intent: 迎新服务
-          - intent: 常用联系方式
-      - action: action_trigger_response_selector
