1）使用action_deny控制faq cqa dqa，不再依赖TED 2）添加ask_rephrase意图用于意图澄清中的否认，避免和deny意图冲突

--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -117,3 +117,7 @@ rules:
       - intent: thank
       - action: utter_noworries
 
+  - rule: greet
+    steps:
+      - intent: greet
+      - action: action_greet_user
