--- a/config.yml
+++ b/config.yml
@@ -89,7 +89,7 @@ policies:
   # # No configuration for policies was provided. The following default policies were used to train your model.
   # # If you'd like to customize them, uncomment and adjust the policies.
   # # See https://rasa.com/docs/rasa/policies for more information.
-  - name: AugmentedMemoizationPolicy
+#  - name: AugmentedMemoizationPolicy
   - name: TEDPolicy
     max_history: 3
     epochs: 100
