--- a/data/rules/fallback.yml
+++ b/data/rules/fallback.yml
@@ -6,3 +6,12 @@ rules:
       - intent: nlu_fallback
       - action: action_default_ask_affirmation
 
+  - rule: ask_rephrase
+    steps:
+      - intent: ask_rephrase
+      - action: utter_ask_rephrase
+
+  - rule: deny
+    steps:
+      - intent: deny
+      - action: action_deny
