修改意图分类回退阈值为0.99（之前是0.9）

--- a/data/nlu/general.yml
+++ b/data/nlu/general.yml
@@ -104,6 +104,8 @@ nlu:
     - 有最新消息吗
     - 有最新消息吗？
     - 有最新通知吗？
+    - 有没有最新通知
+    - 有没有最新的通知
     - 这是去年的了，有没有最新的回复
     - 这是好久的了，有没有最新的回复
     - 有没有最新的回复
@@ -112,6 +114,11 @@ nlu:
     - 这个回复是19年的了
     - 这个是20年的回复了
     - 这是21年的回复了
+    - 没有找到相关的通知
+    - 还有其他相关通知吗？
+    - 没有我想要的
+    - 没有看到相关的
+    - 没有相关的通知呀
 
 - intent: greet
   examples: |
